fix ios fixed and z-index bug

--- a/app/assets/stylesheets/ext_weui/widget/_tab.scss
+++ b/app/assets/stylesheets/ext_weui/widget/_tab.scss
@@ -6,4 +6,5 @@
   overflow-y: auto;
   overflow-x: visible;
   margin-bottom: 60px;
+  -webkit-overflow-scrolling: auto;
 }
